gcc/testsuite/rust.test/fail_compilation/tuple_struct1.rs
struct Foo {
    one: i32,
    two: i32,
}

fn main() {
    let a = Foo(1, 2);
}
